--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,6 +60,9 @@ if(CUDS_BUILD_SHARED)
     )
 
     set_target_properties(cuds_shared PROPERTIES
+        POSITION_INDEPENDENT_CODE ON
+        C_VISIBILITY_PRESET hidden
+        VISIBILITY_INLINES_HIDDEN YES
         OUTPUT_NAME ${PROJECT_NAME}
         VERSION ${PROJECT_VERSION}
         SOVERSION ${PROJECT_VERSION_MAJOR}
@@ -80,6 +83,7 @@ if(CUDS_BUILD_STATIC)
     )
 
     set_target_properties(cuds_static PROPERTIES
+        POSITION_INDEPENDENT_CODE ON
         OUTPUT_NAME ${PROJECT_NAME}
     )
 endif()
